# moderated-chat

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: pipeline.yml
app/: asgi.py  settings.py  urls.py  wsgi.py
app/accounts/: admin.py  managers.py  middleware.py  models.py
app/accounts/api/: serializers.py  urls.py  views.py
app/accounts/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_alter_user_managers.py
app/accounts/tests/: test_api.py
app/chat/: admin.py  models.py  services.py
app/chat/api/: pagination.py  permissions.py  serializers.py  urls.py  views.py
app/chat/migrations/: 0001_initial.py  0002_add_room_participant_through_model.py
app/chat/services/: broadcast_service.py  message_service.py  room_service.py
app/chat/tests/: test_api.py  test_consumers.py  test_services.py
app/chat/websockets/: consumers.py  routing.py
app/moderation/: admin.py  apps.py  models.py  services.py  tasks.py  tests.py
app/moderation/domain/: strategies.py
app/moderation/infrastructure/: gemini.py  local.py
app/moderation/migrations/: 0001_initial.py
app/moderation/services/: gemini.py  local.py  moderator.py
app/moderation/tests/: test_infrastructure.py  test_services.py  test_tasks.py  tests.py
app/utils/: exceptions.py  models.py  pagination.py
nginx/: nginx.conf
scripts/: entrypoint.sh  worker_entrypoint.sh
src/core/: settings.py
